// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Directive > block with content > should add code container handler via config 1`] = `
Array [
  Token {
    "attrs": Array [
      Array [
        "class",
        "code-js",
      ],
    ],
    "block": true,
    "children": null,
    "content": "(function(window) {
window.alert('Hello world!');
})(window);
",
    "hidden": false,
    "info": "js",
    "level": 0,
    "map": Array [
      2,
      7,
    ],
    "markup": ":::",
    "meta": Object {
      "code": true,
      "lang": "js",
    },
    "nesting": 0,
    "tag": "code",
    "type": "code_js",
  },
]
`;

exports[`Directive > helpers > createBlockInlineToken > should parse inline content in block diagram 1`] = `
Array [
  Token {
    "attrs": null,
    "block": true,
    "children": null,
    "content": "",
    "hidden": false,
    "info": "",
    "level": 0,
    "map": null,
    "markup": "",
    "meta": null,
    "nesting": 1,
    "tag": "div",
    "type": "blck_open",
  },
  Token {
    "attrs": null,
    "block": true,
    "children": Array [
      Token {
        "attrs": null,
        "block": false,
        "children": null,
        "content": "",
        "hidden": false,
        "info": "",
        "level": 0,
        "map": null,
        "markup": "*",
        "meta": null,
        "nesting": 1,
        "tag": "em",
        "type": "em_open",
      },
      Token {
        "attrs": null,
        "block": false,
        "children": null,
        "content": "aa",
        "hidden": false,
        "info": "",
        "level": 1,
        "map": null,
        "markup": "",
        "meta": null,
        "nesting": 0,
        "tag": "",
        "type": "text",
      },
      Token {
        "attrs": null,
        "block": false,
        "children": null,
        "content": "",
        "hidden": false,
        "info": "",
        "level": 0,
        "map": null,
        "markup": "*",
        "meta": null,
        "nesting": -1,
        "tag": "em",
        "type": "em_close",
      },
      Token {
        "attrs": null,
        "block": false,
        "children": null,
        "content": " ",
        "hidden": false,
        "info": "",
        "level": 0,
        "map": null,
        "markup": "",
        "meta": null,
        "nesting": 0,
        "tag": "",
        "type": "text",
      },
      Token {
        "attrs": null,
        "block": false,
        "children": null,
        "content": "",
        "hidden": false,
        "info": "",
        "level": 0,
        "map": null,
        "markup": "__",
        "meta": null,
        "nesting": 1,
        "tag": "strong",
        "type": "strong_open",
      },
      Token {
        "attrs": null,
        "block": false,
        "children": null,
        "content": "bb",
        "hidden": false,
        "info": "",
        "level": 1,
        "map": null,
        "markup": "",
        "meta": null,
        "nesting": 0,
        "tag": "",
        "type": "text",
      },
      Token {
        "attrs": null,
        "block": false,
        "children": null,
        "content": "",
        "hidden": false,
        "info": "",
        "level": 0,
        "map": null,
        "markup": "__",
        "meta": null,
        "nesting": -1,
        "tag": "strong",
        "type": "strong_close",
      },
      Token {
        "attrs": null,
        "block": false,
        "children": null,
        "content": " ",
        "hidden": false,
        "info": "",
        "level": 0,
        "map": null,
        "markup": "",
        "meta": null,
        "nesting": 0,
        "tag": "",
        "type": "text",
      },
      Token {
        "attrs": null,
        "block": false,
        "children": null,
        "content": "",
        "hidden": false,
        "info": "",
        "level": 0,
        "map": null,
        "markup": "~~",
        "meta": null,
        "nesting": 1,
        "tag": "s",
        "type": "s_open",
      },
      Token {
        "attrs": null,
        "block": false,
        "children": null,
        "content": "cc",
        "hidden": false,
        "info": "",
        "level": 1,
        "map": null,
        "markup": "",
        "meta": null,
        "nesting": 0,
        "tag": "",
        "type": "text",
      },
      Token {
        "attrs": null,
        "block": false,
        "children": null,
        "content": "",
        "hidden": false,
        "info": "",
        "level": 0,
        "map": null,
        "markup": "~~",
        "meta": null,
        "nesting": -1,
        "tag": "s",
        "type": "s_close",
      },
    ],
    "content": "*aa* __bb__ ~~cc~~",
    "hidden": false,
    "info": "",
    "level": 1,
    "map": Array [
      0,
      1,
    ],
    "markup": "",
    "meta": null,
    "nesting": 0,
    "tag": "",
    "type": "inline",
  },
  Token {
    "attrs": null,
    "block": true,
    "children": null,
    "content": "",
    "hidden": false,
    "info": "",
    "level": 0,
    "map": null,
    "markup": "",
    "meta": null,
    "nesting": -1,
    "tag": "div",
    "type": "blck_close",
  },
]
`;

exports[`Directive > helpers > tokenizeBlockContent > should parse nested directive 1`] = `
Array [
  Token {
    "attrs": null,
    "block": true,
    "children": null,
    "content": "",
    "hidden": false,
    "info": "",
    "level": 0,
    "map": Array [
      0,
      1,
    ],
    "markup": "",
    "meta": null,
    "nesting": 1,
    "tag": "p",
    "type": "paragraph_open",
  },
  Token {
    "attrs": null,
    "block": true,
    "children": Array [
      Token {
        "attrs": null,
        "block": false,
        "children": null,
        "content": "before test",
        "hidden": false,
        "info": "",
        "level": 0,
        "map": null,
        "markup": "",
        "meta": null,
        "nesting": 0,
        "tag": "",
        "type": "text",
      },
    ],
    "content": "before test",
    "hidden": false,
    "info": "",
    "level": 1,
    "map": Array [
      0,
      1,
    ],
    "markup": "",
    "meta": null,
    "nesting": 0,
    "tag": "",
    "type": "inline",
  },
  Token {
    "attrs": null,
    "block": true,
    "children": null,
    "content": "",
    "hidden": false,
    "info": "",
    "level": 0,
    "map": null,
    "markup": "",
    "meta": null,
    "nesting": -1,
    "tag": "p",
    "type": "paragraph_close",
  },
  Token {
    "attrs": null,
    "block": true,
    "children": null,
    "content": "",
    "hidden": false,
    "info": "",
    "level": 0,
    "map": Array [
      4,
      5,
    ],
    "markup": "",
    "meta": null,
    "nesting": 1,
    "tag": "p",
    "type": "paragraph_open",
  },
  Token {
    "attrs": null,
    "block": true,
    "children": Array [
      Token {
        "attrs": null,
        "block": false,
        "children": null,
        "content": "before inner test",
        "hidden": false,
        "info": "",
        "level": 0,
        "map": null,
        "markup": "",
        "meta": null,
        "nesting": 0,
        "tag": "",
        "type": "text",
      },
    ],
    "content": "before inner test",
    "hidden": false,
    "info": "",
    "level": 1,
    "map": Array [
      4,
      5,
    ],
    "markup": "",
    "meta": null,
    "nesting": 0,
    "tag": "",
    "type": "inline",
  },
  Token {
    "attrs": null,
    "block": true,
    "children": null,
    "content": "",
    "hidden": false,
    "info": "",
    "level": 0,
    "map": null,
    "markup": "",
    "meta": null,
    "nesting": -1,
    "tag": "p",
    "type": "paragraph_close",
  },
  Token {
    "attrs": null,
    "block": true,
    "children": null,
    "content": "",
    "hidden": false,
    "info": "",
    "level": 0,
    "map": Array [
      8,
      9,
    ],
    "markup": ">",
    "meta": null,
    "nesting": 1,
    "tag": "blockquote",
    "type": "blockquote_open",
  },
  Token {
    "attrs": null,
    "block": true,
    "children": null,
    "content": "",
    "hidden": false,
    "info": "",
    "level": 1,
    "map": Array [
      8,
      9,
    ],
    "markup": "",
    "meta": null,
    "nesting": 1,
    "tag": "p",
    "type": "paragraph_open",
  },
  Token {
    "attrs": null,
    "block": true,
    "children": Array [
      Token {
        "attrs": null,
        "block": false,
        "children": null,
        "content": "",
        "hidden": false,
        "info": "",
        "level": 0,
        "map": null,
        "markup": "_",
        "meta": null,
        "nesting": 1,
        "tag": "em",
        "type": "em_open",
      },
      Token {
        "attrs": null,
        "block": false,
        "children": null,
        "content": "inner inner content",
        "hidden": false,
        "info": "",
        "level": 1,
        "map": null,
        "markup": "",
        "meta": null,
        "nesting": 0,
        "tag": "",
        "type": "text",
      },
      Token {
        "attrs": null,
        "block": false,
        "children": null,
        "content": "",
        "hidden": false,
        "info": "",
        "level": 0,
        "map": null,
        "markup": "_",
        "meta": null,
        "nesting": -1,
        "tag": "em",
        "type": "em_close",
      },
    ],
    "content": "_inner inner content_",
    "hidden": false,
    "info": "",
    "level": 2,
    "map": Array [
      8,
      9,
    ],
    "markup": "",
    "meta": null,
    "nesting": 0,
    "tag": "",
    "type": "inline",
  },
  Token {
    "attrs": null,
    "block": true,
    "children": null,
    "content": "",
    "hidden": false,
    "info": "",
    "level": 1,
    "map": null,
    "markup": "",
    "meta": null,
    "nesting": -1,
    "tag": "p",
    "type": "paragraph_close",
  },
  Token {
    "attrs": null,
    "block": true,
    "children": null,
    "content": "",
    "hidden": false,
    "info": "",
    "level": 0,
    "map": null,
    "markup": ">",
    "meta": null,
    "nesting": -1,
    "tag": "blockquote",
    "type": "blockquote_close",
  },
  Token {
    "attrs": null,
    "block": true,
    "children": null,
    "content": "",
    "hidden": false,
    "info": "",
    "level": 0,
    "map": Array [
      12,
      13,
    ],
    "markup": "",
    "meta": null,
    "nesting": 1,
    "tag": "p",
    "type": "paragraph_open",
  },
  Token {
    "attrs": null,
    "block": true,
    "children": Array [
      Token {
        "attrs": null,
        "block": false,
        "children": null,
        "content": "after inner test",
        "hidden": false,
        "info": "",
        "level": 0,
        "map": null,
        "markup": "",
        "meta": null,
        "nesting": 0,
        "tag": "",
        "type": "text",
      },
    ],
    "content": "after inner test",
    "hidden": false,
    "info": "",
    "level": 1,
    "map": Array [
      12,
      13,
    ],
    "markup": "",
    "meta": null,
    "nesting": 0,
    "tag": "",
    "type": "inline",
  },
  Token {
    "attrs": null,
    "block": true,
    "children": null,
    "content": "",
    "hidden": false,
    "info": "",
    "level": 0,
    "map": null,
    "markup": "",
    "meta": null,
    "nesting": -1,
    "tag": "p",
    "type": "paragraph_close",
  },
  Token {
    "attrs": null,
    "block": true,
    "children": null,
    "content": "",
    "hidden": false,
    "info": "",
    "level": 0,
    "map": Array [
      16,
      17,
    ],
    "markup": "",
    "meta": null,
    "nesting": 1,
    "tag": "p",
    "type": "paragraph_open",
  },
  Token {
    "attrs": null,
    "block": true,
    "children": Array [
      Token {
        "attrs": null,
        "block": false,
        "children": null,
        "content": "after test",
        "hidden": false,
        "info": "",
        "level": 0,
        "map": null,
        "markup": "",
        "meta": null,
        "nesting": 0,
        "tag": "",
        "type": "text",
      },
    ],
    "content": "after test",
    "hidden": false,
    "info": "",
    "level": 1,
    "map": Array [
      16,
      17,
    ],
    "markup": "",
    "meta": null,
    "nesting": 0,
    "tag": "",
    "type": "inline",
  },
  Token {
    "attrs": null,
    "block": true,
    "children": null,
    "content": "",
    "hidden": false,
    "info": "",
    "level": 0,
    "map": null,
    "markup": "",
    "meta": null,
    "nesting": -1,
    "tag": "p",
    "type": "paragraph_close",
  },
]
`;

exports[`Directive > helpers > tokenizeInlineContent > should parse content in inline directive 1`] = `
Array [
  Token {
    "attrs": null,
    "block": true,
    "children": null,
    "content": "",
    "hidden": false,
    "info": "",
    "level": 0,
    "map": Array [
      0,
      1,
    ],
    "markup": "",
    "meta": null,
    "nesting": 1,
    "tag": "p",
    "type": "paragraph_open",
  },
  Token {
    "attrs": null,
    "block": true,
    "children": Array [
      Token {
        "attrs": null,
        "block": false,
        "children": null,
        "content": "text ",
        "hidden": false,
        "info": "",
        "level": 0,
        "map": null,
        "markup": "",
        "meta": null,
        "nesting": 0,
        "tag": "",
        "type": "text",
      },
      Token {
        "attrs": null,
        "block": false,
        "children": null,
        "content": "",
        "hidden": false,
        "info": "",
        "level": 0,
        "map": null,
        "markup": "",
        "meta": null,
        "nesting": 1,
        "tag": "span",
        "type": "inl_open",
      },
      Token {
        "attrs": null,
        "block": false,
        "children": null,
        "content": "",
        "hidden": false,
        "info": "",
        "level": 1,
        "map": null,
        "markup": "*",
        "meta": null,
        "nesting": 1,
        "tag": "em",
        "type": "em_open",
      },
      Token {
        "attrs": null,
        "block": false,
        "children": null,
        "content": "aa",
        "hidden": false,
        "info": "",
        "level": 2,
        "map": null,
        "markup": "",
        "meta": null,
        "nesting": 0,
        "tag": "",
        "type": "text",
      },
      Token {
        "attrs": null,
        "block": false,
        "children": null,
        "content": "",
        "hidden": false,
        "info": "",
        "level": 1,
        "map": null,
        "markup": "*",
        "meta": null,
        "nesting": -1,
        "tag": "em",
        "type": "em_close",
      },
      Token {
        "attrs": null,
        "block": false,
        "children": null,
        "content": " ",
        "hidden": false,
        "info": "",
        "level": 1,
        "map": null,
        "markup": "",
        "meta": null,
        "nesting": 0,
        "tag": "",
        "type": "text",
      },
      Token {
        "attrs": null,
        "block": false,
        "children": null,
        "content": "",
        "hidden": false,
        "info": "",
        "level": 1,
        "map": null,
        "markup": "__",
        "meta": null,
        "nesting": 1,
        "tag": "strong",
        "type": "strong_open",
      },
      Token {
        "attrs": null,
        "block": false,
        "children": null,
        "content": "bb",
        "hidden": false,
        "info": "",
        "level": 2,
        "map": null,
        "markup": "",
        "meta": null,
        "nesting": 0,
        "tag": "",
        "type": "text",
      },
      Token {
        "attrs": null,
        "block": false,
        "children": null,
        "content": "",
        "hidden": false,
        "info": "",
        "level": 1,
        "map": null,
        "markup": "__",
        "meta": null,
        "nesting": -1,
        "tag": "strong",
        "type": "strong_close",
      },
      Token {
        "attrs": null,
        "block": false,
        "children": null,
        "content": " ",
        "hidden": false,
        "info": "",
        "level": 1,
        "map": null,
        "markup": "",
        "meta": null,
        "nesting": 0,
        "tag": "",
        "type": "text",
      },
      Token {
        "attrs": null,
        "block": false,
        "children": null,
        "content": "",
        "hidden": false,
        "info": "",
        "level": 1,
        "map": null,
        "markup": "~~",
        "meta": null,
        "nesting": 1,
        "tag": "s",
        "type": "s_open",
      },
      Token {
        "attrs": null,
        "block": false,
        "children": null,
        "content": "cc",
        "hidden": false,
        "info": "",
        "level": 2,
        "map": null,
        "markup": "",
        "meta": null,
        "nesting": 0,
        "tag": "",
        "type": "text",
      },
      Token {
        "attrs": null,
        "block": false,
        "children": null,
        "content": "",
        "hidden": false,
        "info": "",
        "level": 1,
        "map": null,
        "markup": "~~",
        "meta": null,
        "nesting": -1,
        "tag": "s",
        "type": "s_close",
      },
      Token {
        "attrs": null,
        "block": false,
        "children": null,
        "content": "",
        "hidden": false,
        "info": "",
        "level": 0,
        "map": null,
        "markup": "",
        "meta": null,
        "nesting": -1,
        "tag": "span",
        "type": "inl_close",
      },
      Token {
        "attrs": null,
        "block": false,
        "children": null,
        "content": " text2",
        "hidden": false,
        "info": "",
        "level": 0,
        "map": null,
        "markup": "",
        "meta": null,
        "nesting": 0,
        "tag": "",
        "type": "text",
      },
    ],
    "content": "text :inl[*aa* __bb__ ~~cc~~] text2",
    "hidden": false,
    "info": "",
    "level": 1,
    "map": Array [
      0,
      1,
    ],
    "markup": "",
    "meta": null,
    "nesting": 0,
    "tag": "",
    "type": "inline",
  },
  Token {
    "attrs": null,
    "block": true,
    "children": null,
    "content": "",
    "hidden": false,
    "info": "",
    "level": 0,
    "map": null,
    "markup": "",
    "meta": null,
    "nesting": -1,
    "tag": "p",
    "type": "paragraph_close",
  },
]
`;

exports[`Directive > inline > should parse inline content, dests and attrs in inline directive 1`] = `
Object {
  "attrs": Object {
    "abc": "def",
    "attr": "value",
    "flag": "true",
  },
  "content": Object {
    "endPos": 35,
    "raw": "\\"inline _content_\\"",
    "startPos": 17,
  },
  "dests": Object {
    "_original_dests": Array [
      Array [
        "link",
        "path/to/smth",
      ],
      Array [
        "string",
        "text",
      ],
      Array [
        "string",
        "test2",
      ],
      Array [
        "link",
        "id-of-smth",
      ],
    ],
    "link": "path/to/smth",
    "string": "text",
  },
  "endPos": 108,
  "startPos": 12,
}
`;

exports[`Directive > leaf block > should add handler via config 1`] = `
Array [
  Token {
    "attrs": Array [
      Array [
        "data-block",
        "2",
      ],
      Array [
        "data-env",
        "this is blck leaf directive",
      ],
    ],
    "block": true,
    "children": null,
    "content": "",
    "hidden": false,
    "info": "",
    "level": 0,
    "map": Array [
      2,
      3,
    ],
    "markup": "::blck",
    "meta": Object {
      "data": "2",
      "env": "this is blck leaf directive",
      "leaf": true,
    },
    "nesting": 0,
    "tag": "div",
    "type": "leaf-block",
  },
]
`;
